objects/L2I_Aircraft_Type__c.object
<CustomObject>
    <description>Custom Object to hold the different types of Aircrafts</description>
    <fields>
        <fullName>AircraftType_External_Id__c</fullName>
        <description>External Id for data migration</description>
        <externalId>true</externalId>
        <label>AircraftType_External_Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_in_Oracle_PT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available in Oracle PT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Type__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The type of the aircraft (ex. A380, A380-800, A380-841, etc.)</inlineHelpText>
        <label>Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Body_Type__c</fullName>
        <inlineHelpText>Represents body type of Aircraft</inlineHelpText>
        <label>Body Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Narrow Body</fullName>
                </value>
                <value>
                    <fullName>Wide Body</fullName>
                </value>
                <value>
                    <fullName>Regional Jet</fullName>
                </value>
                <value>
                    <fullName>Business Jet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Whether this value can be selected in pick lists/drop down boxes.  Used to prevent users from selecting old values which cannot be deleted.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Make__c</fullName>
        <label>Make</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Manuf_Make_Type_Combo_Must_Be_Unique__c</fullName>
        <label>Manuf Make Type Combo Must Be Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Manufacturer_Party_ID__c</fullName>
        <label>Manufacturer Party ID</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Master_Series__c</fullName>
        <inlineHelpText>The general master series of the aircraft (e.g. 200, 300) - used to refer to many variants</inlineHelpText>
        <label>Master Series</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Model__c</fullName>
        <inlineHelpText>The high level name of the Aircraft Model (e.g. A380, 737) - groups many master series</inlineHelpText>
        <label>Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_PAC_Master_Aircraft_Type_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The record ID of the Aircraft Type in the PAC Aircraft Type/Taxonomy Master database table</inlineHelpText>
        <label>PAC Master Aircraft Type ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_PAC_Type_Designator__c</fullName>
        <inlineHelpText>PAC aircraft type designator (derived from ICAO), typically 3-4 digits in length</inlineHelpText>
        <label>PAC Type Designator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Program_Code__c</fullName>
        <inlineHelpText>Three digit code used for Program number generation</inlineHelpText>
        <label>Program Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Series__c</fullName>
        <inlineHelpText>The specific series / subtype of the aircraft (e.g. 241, 341) - used in service to identify specific aircraft variants.</inlineHelpText>
        <label>Series</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Type_Level_ID__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Type Level ID</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Type_Level__c</fullName>
        <formula>IF(TEXT(L2I_Type_Level_ID__c) = &#39;1&#39;, &quot;Model&quot;,
IF(TEXT(L2I_Type_Level_ID__c) = &#39;2&#39;, &quot;Master Series&quot;,
IF(TEXT(L2I_Type_Level_ID__c) = &#39;3&#39;, &quot;Series&quot;, &quot;Series&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The level of detail defined by this aircraft type (1 is less detailed, 3 is very detailed)</inlineHelpText>
        <label>Type Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The name of the Aircraft Manufacturer</inlineHelpText>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aircraft Types</relationshipLabel>
        <relationshipName>Aircraft_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Aircraft Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>L2I_Make__c</columns>
        <columns>L2I_Aircraft_Type__c</columns>
        <columns>L2I_Type_Level__c</columns>
        <columns>L2I_Master_Series__c</columns>
        <columns>L2I_Model__c</columns>
        <columns>L2I_Series__c</columns>
        <columns>L2I_PAC_Type_Designator__c</columns>
        <columns>L2I_Is_Active__c</columns>
        <columns>L2I_Program_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft Types</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>L2I_Aircraft_Type_Name_Unique</fullName>
        <active>true</active>
        <description>Aircraft Type Name must be unique</description>
        <errorConditionFormula>and( 
Name = VLOOKUP 
($ObjectType.L2I_Aircraft_Type__c.Fields.Name , $ObjectType.L2I_Aircraft_Type__c.Fields.Name, Name ), 

not( 
Id=VLOOKUP 
($ObjectType.L2I_Aircraft_Type__c.Fields.Id , $ObjectType.L2I_Aircraft_Type__c.Fields.Name, Name )))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The name of your Aircraft Type must be unique</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Master_Series_Required</fullName>
        <active>true</active>
        <description>Master Series is required if Type Level ID = 2</description>
        <errorConditionFormula>AND(
  L2I_Master_Series__c = &quot;&quot;,
   TEXT(L2I_Type_Level_ID__c) = &quot;2&quot;)</errorConditionFormula>
        <errorDisplayField>L2I_Master_Series__c</errorDisplayField>
        <errorMessage>Master Series cannot be blank if Type Level ID = 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Series_Required</fullName>
        <active>true</active>
        <description>Series is required if Type Level ID = 3</description>
        <errorConditionFormula>AND( 
L2I_Series__c = &quot;&quot;, 
TEXT(L2I_Type_Level_ID__c) = &quot;3&quot;)</errorConditionFormula>
        <errorDisplayField>L2I_Series__c</errorDisplayField>
        <errorMessage>Series cannot be blank if Type Level ID = 3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Level_ID_1_Master_Series_and_Series</fullName>
        <active>true</active>
        <description>Validation
If Type Level = 1 Then Series and Master Series Must be Blank</description>
        <errorConditionFormula>AND(
(L2I_Type_Level_ID__c = 1),
OR(
NOT(ISBLANK(L2I_Master_Series__c)),
NOT(ISBLANK(L2I_Series__c))))</errorConditionFormula>
        <errorMessage>If Type Level ID = 1 Then Series and Master Series Must be Blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Level_ID_2_Series</fullName>
        <active>true</active>
        <description>If Type Level ID = 2 Series must be blank</description>
        <errorConditionFormula>AND(
(L2I_Type_Level_ID__c = 2),
AND(NOT(ISBLANK(L2I_Series__c))
))</errorConditionFormula>
        <errorDisplayField>L2I_Series__c</errorDisplayField>
        <errorMessage>If Type Level ID = 2 Then Series Must be Blank</errorMessage>
    </validationRules>
</CustomObject>